--- a/scss/__footer.scss
+++ b/scss/__footer.scss
@@ -11,6 +11,8 @@ $color_blue: #07111d;
 
     background-color: $color_blue;
 
+    position: relative;
+
     // .footer__item-img
 
     &__item-img {
