--- a/css/style.css
+++ b/css/style.css
@@ -2557,8 +2557,8 @@ body.active {
 
 .form {
   -webkit-box-flex: 0;
-      -ms-flex: 0 1 45%;
-          flex: 0 1 45%;
+      -ms-flex: 0 1 48%;
+          flex: 0 1 48%;
 }
 
 .title-coffin {
@@ -2725,8 +2725,8 @@ body.active {
 
 .shop-calc {
   -webkit-box-flex: 0;
-      -ms-flex: 0 1 45%;
-          flex: 0 1 45%;
+      -ms-flex: 0 1 48%;
+          flex: 0 1 48%;
 }
 
 .shop-calc__title {
@@ -2809,6 +2809,50 @@ body.active {
 
 .shop-calc__delete img {
   height: 30px;
+}
+
+.loader {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 10px 0px 0px 20px;
+}
+
+.loader__input {
+  opacity: 0;
+}
+
+.loader__input:checked + .loader__title::after {
+  opacity: 1;
+}
+
+.loader__title {
+  font-family: 'Montserrat';
+  font-size: 18px;
+  font-weight: 500;
+  color: #ba9f5a;
+  position: relative;
+}
+
+.loader__title::before {
+  content: '';
+  position: absolute;
+  top: -5px;
+  left: -32px;
+  height: 25px;
+  width: 25px;
+  border: #ba9f5a 2px solid;
+}
+
+.loader__title::after {
+  content: '';
+  position: absolute;
+  top: -20px;
+  left: -37px;
+  height: 45px;
+  width: 45px;
+  opacity: 0;
+  background: url(../img/__calc/check-icon.png) 0 0/cover no-repeat;
 }
 
 .footer {
