--- a/css/style.css
+++ b/css/style.css
@@ -2788,7 +2788,9 @@ body.active {
   line-height: 150%;
   font-size: 17px;
   font-weight: 500;
-  color: #5B5B5B;
+  color: #fff;
+  background-color: #ba9f5a;
+  text-align: center;
 }
 
 .shop-calc__delete {
@@ -2811,22 +2813,27 @@ body.active {
   height: 30px;
 }
 
-.loader {
+.loader, .delivery {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   padding: 10px 0px 0px 20px;
+  margin: 0px 0px 20px 0px;
 }
 
-.loader__input {
+.loader__input, .delivery__input {
   opacity: 0;
 }
 
-.loader__input:checked + .loader__title::after {
+.loader__input:checked + .loader__title::after, .delivery__input:checked + .loader__title::after {
   opacity: 1;
 }
 
-.loader__title {
+.loader__input:checked + .delivery__title::after, .delivery__input:checked + .delivery__title::after {
+  opacity: 1;
+}
+
+.loader__title, .delivery__title {
   font-family: 'Montserrat';
   font-size: 18px;
   font-weight: 500;
@@ -2834,7 +2841,7 @@ body.active {
   position: relative;
 }
 
-.loader__title::before {
+.loader__title::before, .delivery__title::before {
   content: '';
   position: absolute;
   top: -5px;
@@ -2844,7 +2851,7 @@ body.active {
   border: #ba9f5a 2px solid;
 }
 
-.loader__title::after {
+.loader__title::after, .delivery__title::after {
   content: '';
   position: absolute;
   top: -20px;
@@ -2891,6 +2898,7 @@ body.active {
   -webkit-box-flex: 0;
       -ms-flex: 0 1 60%;
           flex: 0 1 60%;
+  padding: 0px 0px 0px 20px;
 }
 
 .check__title {
@@ -2906,7 +2914,9 @@ body.active {
   line-height: 150%;
   font-size: 17px;
   font-weight: 500;
-  color: #5B5B5B;
+  color: #fff;
+  background-color: #ba9f5a;
+  text-align: center;
 }
 
 .check__del {
