--- a/css/style.css
+++ b/css/style.css
@@ -2789,7 +2789,7 @@ body.active {
   font-size: 17px;
   font-weight: 500;
   color: #fff;
-  background-color: #ba9f5a;
+  background-color: #6d9771;
   text-align: center;
 }
 
@@ -2915,7 +2915,7 @@ body.active {
   font-size: 17px;
   font-weight: 500;
   color: #fff;
-  background-color: #ba9f5a;
+  background-color: #6d9771;
   text-align: center;
 }
 
