--- a/scss/__calc.scss
+++ b/scss/__calc.scss
@@ -214,7 +214,7 @@ $color_blue: #07111d;
         font-size: 17px;
         font-weight: 500;
         color: #fff;
-        background-color: $color_golg;
+        background-color: #6d9771;
         text-align: center;
     }
 
@@ -327,7 +327,7 @@ $color_blue: #07111d;
         font-size: 17px;
         font-weight: 500;
         color: #fff;
-        background-color: $color_golg;
+        background-color: #6d9771;
         text-align: center;
     }
 
