--- a/css/style.css
+++ b/css/style.css
@@ -2561,12 +2561,132 @@ body.active {
           flex: 0 1 48%;
 }
 
-.title-coffin {
+@media (max-width: 950px) {
+  .form {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 100%;
+            flex: 0 1 100%;
+    margin: 0px 20px 0px 20px;
+  }
+}
+
+.shop-calc {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 48%;
+          flex: 0 1 48%;
+}
+
+@media (max-width: 950px) {
+  .shop-calc {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 0%;
+            flex: 0 1 0%;
+    display: none;
+  }
+}
+
+.shop-calc__title {
+  font-family: 'Montserrat';
+  line-height: 150%;
+  font-size: 20px;
+  font-weight: 500;
+  color: #ba9f5a;
+}
+
+.shop-calc__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  min-height: 100px;
+  border-bottom: #ba9f5a 1px solid;
+}
+
+.shop-calc__img-box {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 30%;
+          flex: 0 1 30%;
+  padding-bottom: 15%;
+  position: relative;
+}
+
+.shop-calc__img-box img {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  -webkit-transform: translate(-50%, 0);
+      -ms-transform: translate(-50%, 0);
+          transform: translate(-50%, 0);
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.shop-calc__info {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 60%;
+          flex: 0 1 60%;
+  padding: 0px 0px 0px 20px;
+}
+
+.shop-calc__text {
   font-family: 'Montserrat';
   line-height: 150%;
   font-size: 20px;
   font-weight: 500;
   color: #5B5B5B;
+}
+
+.shop-calc__cash {
+  font-family: 'Montserrat';
+  line-height: 150%;
+  font-size: 17px;
+  font-weight: 500;
+  color: #fff;
+  background-color: #6d9771;
+  text-align: center;
+}
+
+.shop-calc__delete {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 10%;
+          flex: 0 1 10%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  cursor: pointer;
+}
+
+.shop-calc__delete img {
+  height: 30px;
+}
+
+.title-calc {
+  font-family: 'Montserrat';
+  line-height: 150%;
+  font-size: 20px;
+  font-weight: 500;
+  color: #5B5B5B;
+}
+
+@media (max-width: 1910px) {
+  .title-calc {
+    font-size: calc(17px + 3 * (100vw - 375px) / 1535);
+  }
+}
+
+@media (max-width: 375px) {
+  .title-calc {
+    font-size: 17px;
+  }
 }
 
 .wreath, .dress, .cross, .coffin {
@@ -2602,7 +2722,7 @@ body.active {
   font-size: 20px;
   font-weight: 500;
   color: #ba9f5a;
-  padding: 0px 0px 0px 20px;
+  padding: 0px 35px 0px 20px;
   position: relative;
 }
 
@@ -2610,7 +2730,7 @@ body.active {
   content: '';
   position: absolute;
   top: -3px;
-  right: -30px;
+  right: 0px;
   width: 30px;
   height: 30px;
   background: url(../img/icon-v.png) 0 0/cover no-repeat;
@@ -2723,97 +2843,7 @@ body.active {
   padding: 100px 0px 0px 0px;
 }
 
-.shop-calc {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 1 48%;
-          flex: 0 1 48%;
-}
-
-.shop-calc__title {
-  font-family: 'Montserrat';
-  line-height: 150%;
-  font-size: 20px;
-  font-weight: 500;
-  color: #ba9f5a;
-}
-
-.shop-calc__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  height: 100px;
-  border-bottom: #ba9f5a 1px solid;
-}
-
-.shop-calc__img-box {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 1 30%;
-          flex: 0 1 30%;
-  padding-bottom: 15%;
-  position: relative;
-}
-
-.shop-calc__img-box img {
-  position: absolute;
-  top: 0;
-  left: 50%;
-  -webkit-transform: translate(-50%, 0);
-      -ms-transform: translate(-50%, 0);
-          transform: translate(-50%, 0);
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-.shop-calc__info {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 1 60%;
-          flex: 0 1 60%;
-  padding: 0px 0px 0px 20px;
-}
-
-.shop-calc__text {
-  font-family: 'Montserrat';
-  line-height: 150%;
-  font-size: 20px;
-  font-weight: 500;
-  color: #5B5B5B;
-}
-
-.shop-calc__cash {
-  font-family: 'Montserrat';
-  line-height: 150%;
-  font-size: 17px;
-  font-weight: 500;
-  color: #fff;
-  background-color: #6d9771;
-  text-align: center;
-}
-
-.shop-calc__delete {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 1 10%;
-          flex: 0 1 10%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  cursor: pointer;
-}
-
-.shop-calc__delete img {
-  height: 30px;
-}
-
-.loader, .delivery {
+.loader, .delivery, .digging, .transport {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2821,40 +2851,49 @@ body.active {
   margin: 0px 0px 20px 0px;
 }
 
-.loader__input, .delivery__input {
+.loader__input, .delivery__input, .digging__input, .transport__input {
   opacity: 0;
 }
 
-.loader__input:checked + .loader__title::after, .delivery__input:checked + .loader__title::after {
+.loader__input:checked + .loader__title::after, .delivery__input:checked + .loader__title::after, .digging__input:checked + .loader__title::after, .transport__input:checked + .loader__title::after {
   opacity: 1;
 }
 
-.loader__input:checked + .delivery__title::after, .delivery__input:checked + .delivery__title::after {
+.loader__input:checked + .delivery__title::after, .delivery__input:checked + .delivery__title::after, .digging__input:checked + .delivery__title::after, .transport__input:checked + .delivery__title::after {
   opacity: 1;
 }
 
-.loader__title, .delivery__title {
+.loader__input:checked + .digging__title::after, .delivery__input:checked + .digging__title::after, .digging__input:checked + .digging__title::after, .transport__input:checked + .digging__title::after {
+  opacity: 1;
+}
+
+.loader__input:checked + .transport__title::after, .delivery__input:checked + .transport__title::after, .digging__input:checked + .transport__title::after, .transport__input:checked + .transport__title::after {
+  opacity: 1;
+}
+
+.loader__title, .delivery__title, .digging__title, .transport__title {
   font-family: 'Montserrat';
   font-size: 18px;
   font-weight: 500;
   color: #ba9f5a;
+  line-height: 140%;
   position: relative;
 }
 
-.loader__title::before, .delivery__title::before {
+.loader__title::before, .delivery__title::before, .digging__title::before, .transport__title::before {
   content: '';
   position: absolute;
-  top: -5px;
+  top: -2px;
   left: -32px;
   height: 25px;
   width: 25px;
   border: #ba9f5a 2px solid;
 }
 
-.loader__title::after, .delivery__title::after {
+.loader__title::after, .delivery__title::after, .digging__title::after, .transport__title::after {
   content: '';
   position: absolute;
-  top: -20px;
+  top: -17px;
   left: -37px;
   height: 45px;
   width: 45px;
@@ -2870,7 +2909,7 @@ body.active {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 100px;
+  min-height: 100px;
   border-bottom: #ba9f5a 1px solid;
 }
 
@@ -2909,6 +2948,18 @@ body.active {
   color: #5B5B5B;
 }
 
+@media (max-width: 1910px) {
+  .check__title {
+    font-size: calc(16px + 4 * (100vw - 375px) / 1535);
+  }
+}
+
+@media (max-width: 375px) {
+  .check__title {
+    font-size: 16px;
+  }
+}
+
 .check__praice {
   font-family: 'Montserrat';
   line-height: 150%;
@@ -2917,6 +2968,7 @@ body.active {
   color: #fff;
   background-color: #6d9771;
   text-align: center;
+  margin: 0px 0px 10px 0px;
 }
 
 .check__del {
