--- a/scss/__calc.scss
+++ b/scss/__calc.scss
@@ -9,15 +9,103 @@ $color_blue: #07111d;
     display: flex;
     justify-content: space-around;
 }
+
 .form{
     flex:0 1 48%;
+    @media (max-width: 950px){
+        flex: 0 1 100%;
+        margin:0px 20px 0px 20px;
+    }
 }
-.title-coffin{
+
+.shop-calc {
+    flex: 0 1 48%;
+    @media (max-width: 950px){
+        flex: 0 1 0%;
+        display: none;
+    }
+
+    // .shop-calc__title
+    &__title {
+    font-family: 'Montserrat';
+    line-height: 150%;
+    font-size: 20px;
+    font-weight: 500;
+    color: $color_golg;
+    }
+
+    // .shop-calc__list
+    &__list {
+        display: flex;
+        align-items: center;
+        min-height: 100px;
+        border-bottom: $color_golg 1px solid;
+    }
+
+    // .shop-calc__img
+    &__img-box {
+        flex: 0 1 30%;
+        padding-bottom: 15%;
+        position: relative;
+        & img {
+            position: absolute;
+            top: 0;
+            left: 50%;
+            transform: translate(-50%, 0);
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+
+    // .shop-calc__info
+    &__info {
+        flex: 0 1 60%;
+        padding: 0px 0px 0px 20px;
+    }
+
+    &__text{
+        font-family: 'Montserrat';
+        line-height: 150%;
+        font-size: 20px;
+        font-weight: 500;
+        color: $color_text;
+    }
+
+    // .shop-calc__cash
+    &__cash {
+        font-family: 'Montserrat';
+        line-height: 150%;
+        font-size: 17px;
+        font-weight: 500;
+        color: #fff;
+        background-color: #6d9771;
+        text-align: center;
+    }
+
+    &__delete{
+        flex: 0 1 10%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        & img {
+            height: 30px;
+        }
+    }
+}
+
+.title-calc{
     font-family: 'Montserrat';
     line-height: 150%;
     font-size: 20px;
     font-weight: 500;
     color: $color_text;
+    @media (max-width: 1910px){
+        font-size: calc(17px + 3 * (100vw - 375px) / 1535);
+    }
+    @media (max-width: 375px){
+        font-size: 17px;
+    }
 }
 
 .wreath, .dress, .cross, .coffin {
@@ -49,14 +137,14 @@ $color_blue: #07111d;
         font-size: 20px;
         font-weight: 500;
         color: $color_golg;
-        padding: 0px 0px 0px 20px;
+        padding: 0px 35px 0px 20px;
         position: relative;
         //after
         &::after{
             content: '';
             position: absolute;
             top: -3px;
-            right: -30px;
+            right: 0px;
             width: 30px;
             height: 30px;
             background:url(../img/icon-v.png) 0 0 / cover no-repeat;
@@ -152,91 +240,18 @@ $color_blue: #07111d;
         
     }
 }
+
 .padding{
     width: 100%;
     padding: 100px 0px 0px 0px;
 }
 
-.shop-calc {
-    flex: 0 1 48%;
-
-    // .shop-calc__title
-
-    &__title {
-    font-family: 'Montserrat';
-    line-height: 150%;
-    font-size: 20px;
-    font-weight: 500;
-    color: $color_golg;
-    }
-
-    // .shop-calc__list
-    &__list {
-        display: flex;
-        align-items: center;
-        height: 100px;
-        border-bottom: $color_golg 1px solid;
-    }
-
-    // .shop-calc__img
-    &__img-box {
-        flex: 0 1 30%;
-        padding-bottom: 15%;
-        position: relative;
-        & img {
-            position: absolute;
-            top: 0;
-            left: 50%;
-            transform: translate(-50%, 0);
-            height: 100%;
-            object-fit: cover;
-        }
-    }
-
-    // .shop-calc__info
-    &__info {
-        flex: 0 1 60%;
-        padding: 0px 0px 0px 20px;
-    }
-
-    &__text{
-        font-family: 'Montserrat';
-        line-height: 150%;
-        font-size: 20px;
-        font-weight: 500;
-        color: $color_text;
-    }
-
-    // .shop-calc__cash
-    &__cash {
-        font-family: 'Montserrat';
-        line-height: 150%;
-        font-size: 17px;
-        font-weight: 500;
-        color: #fff;
-        background-color: #6d9771;
-        text-align: center;
-    }
-
-    &__delete{
-        flex: 0 1 10%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        cursor: pointer;
-        & img {
-            height: 30px;
-        }
-    }
-}
-
-.loader, .delivery {
+.loader, .delivery, .digging, .transport {
     display: flex;
     padding: 10px 0px 0px 20px;
     margin:0px 0px 20px 0px;
 
     // .loader__input
-
     &__input {
         opacity: 0;
         &:checked + .loader__title::after {
@@ -245,21 +260,27 @@ $color_blue: #07111d;
         &:checked + .delivery__title::after {
             opacity: 1;
         }
+        &:checked + .digging__title::after {
+            opacity: 1;
+        }
+        &:checked + .transport__title::after {
+            opacity: 1;
+        }
     }
 
     // .loader__title
-
     &__title {
         font-family: 'Montserrat';
         font-size: 18px;
         font-weight: 500;
         color: $color_golg;
+        line-height: 140%;
 
         position: relative;
         &::before {
             content: '';
             position: absolute;
-            top: -5px;
+            top: -2px;
             left: -32px;
 
             height: 25px;
@@ -271,7 +292,7 @@ $color_blue: #07111d;
         &::after {
             content: '';
             position: absolute;
-            top: -20px;
+            top: -17px;
             left: -37px;
 
             height: 45px;
@@ -287,7 +308,7 @@ $color_blue: #07111d;
     display: flex;
     width: 100%;
     align-items: center;
-    height: 100px;
+    min-height: 100px;
     border-bottom: $color_golg 1px solid;
 
     // .check__img
@@ -318,6 +339,12 @@ $color_blue: #07111d;
         font-size: 20px;
         font-weight: 500;
         color: $color_text;
+        @media (max-width: 1910px){
+            font-size: calc(16px + 4 * (100vw - 375px) / 1535);
+        }
+        @media (max-width: 375px){
+            font-size: 16px;
+        }
     }
 
     // .check__praice
@@ -329,6 +356,7 @@ $color_blue: #07111d;
         color: #fff;
         background-color: #6d9771;
         text-align: center;
+        margin:0px 0px 10px 0px;
     }
 
     // .check__del
